<resources>
    <string name="app_name">DSC Security</string>
    <string name="title_activity_log_in">DSC Security</string>
    <string name="user_prompt">Usuario</string>
    <string name="password_prompt">Contraseña</string>
    <string name="open_sesion_checkbox">Mantener sesion abierta</string>
    <string name="log_in_prompt">Ingresar</string>
    <string name="dsc_copy">©DSC 2019 </string>
    <string name="sesion_opened_advice_title">Sesion abierta</string>
    <string name="sesion_opened_advice">Se mantendra la sincronizacion, notificaciones y datos mientras la sesion estee abierta.</string>
    <string name="dsc_text_ok">OK</string>
    <string name="should_auto_open">should_auto_open</string>
    <string name="image_description">Image description</string>
    <string name="field_cannot_be_empty">Este campo no puede estar vacio</string>
    <string name="networ_error_title">Error de red</string>
    <string name="network_error_advice">Nop se ha podido conectar al servidor. Favor de verificar tu conexion a internet</string>
    <string name="network_timeout_title">Error de red</string>
    <string name="network_timeout_advice">Se ha agotado el tiempo de espera de conexion con el servidor.</string>
    <string name="network_response_error_title">Server error</string>
    <string name="server_response_error">Respuesta invalida del servidor. Codigo de estado : %1$s</string>
    <string name="log_in_title">Inicio de sesion</string>
    <string name="failed_login_advice">Usuario o contraseña incorrectos</string>
    <string name="title_activity_dsc_main">DscMainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">DHL Supply Chain</string>
    <string name="nav_header_subtitle">javier.ramirezs@dhl.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="example_text">Hello this is an example text</string>
    <string name="report_text">Reportes</string>
    <string name="oficials">Guardias</string>
    <string name="feddback">Feedback</string>
    <string name="bug_report">Bug report</string>
    <string name="statidistics">Estadisticos</string>
    <string name="exit">Cerrar Sesion</string>
    <string name="feedback">Comentarios</string>
    <string name="about">About this app</string>
    <string name="leave_app">Salir de la app</string>
    <string name="leave_app_advice">Desea cerrar su sesion?</string>
    <string name="cancel">Cancelar</string>
    <string name="incident_tiltle">Malas practicas</string>
    <string name="incident_timestamp">2015-10-25 10:30 AM</string>
    <string name="incident_description">Lorem ipsum dolor sit amet helo this is atesting mesge that hasno sente to al thwe world  odjsbvhp sdbh ñjb vob dosvjbojvs pksdh vok nhok sdnhvojb sdovhboñj ñsdbhvojb kdbvoubj </string>
    <string name="r_menu_archive">Archivar</string>
    <string name="r_menu_share">Enviar/Asignar</string>
    <string name="send_message">Agregar comentario</string>
    <string name="t_what_text">Que paso : </string>
    <string name="t_how_text">Como paso : </string>
    <string name="t_where_exp">Donde paso : </string>
    <string name="t_facts">Hechos : </string>
    <string name="evidences_text">Evidencias : </string>
    <string name="signatures_text">Firmas : </string>
    <string name="appbar_title_reports">Reportes de incidentes</string>
    <string name="example_username">someone</string>
    <string name="example_message">This is an example message</string>
    <string name="example_timestamp">20 Oct 10:50 am</string>
    <string name="comments_card">Comentarios : </string>
    <string name="comment_is_empty">Escribe algo</string>
    <string name="be_the_first_to_comment">Se el primero en comentar</string>
    <string name="channel_name_report">Reportes</string>
    <string name="channel_name_edo">Estado de fuerza</string>
    <string name="channel_name_report_description_low">Reportes con prioridad baja</string>
    <string name="report_notif_title">%1$s Nuevos reportes</string>
    <string name="channel_name_edo_description_low">Estado de fuerza</string>
    <string name="channel_name_download">Descargas en segundo plano</string>
    <string name="channel_name_download_description">Descarga de imagenes, archivos etc</string>
    <string name="channel_name_report_description_medium">Reportes con prioridad media</string>
    <string name="channel_name_report_description_high">Reportes con prioridad alta</string>
    <string name="filter_action_title">Filtrar reportes</string>
    <string name="sttings">Configuracion</string>
    <string name="filter_reports">Filtrar reportes</string>
    <string name="site">Site</string>
    <string name="view_reports_archived">Reportes archivados</string>
    <string name="report_flag_title">Marcar reporte como : </string>
    <string name="report_status">Resuelto</string>
    <string name="report_status_flag_default">Sin Resolver</string>
    <string name="report_status_flag_pending">Pendiente</string>
    <string name="report_status_flag_resolved">Resuelto</string>
    <string name="report_status_flag_asigned">Asignado</string>
    <string name="report_share">Separe por punto y coma cada usuario / mail.</string>
    <string name="report_share_hint">Introduzca usuario o mail</string>
    <string name="report_share_message_hint">Mensaje (Opcional)</string>
    <string name="report_share_message">A new report has been addressed to you. %1$s</string>
    <string name="radio_button_text_enviar">Notificar</string>
    <string name="radio_button_text_asignar">Asignar</string>
    <string name="radio_button_text_ro">Ver</string>
    <string name="edo_reports">Reporte estado de fuerza</string>
    <string name="edo_reports_settings">Administracion</string>
    <string name="site_name">Seguridad patrimonial</string>
    <string name="refresh">Refresh</string>
    <string name="guard_created">Alta : %1$s</string>
    <string name="ap_created">Fecha de creacion : %1$s</string>
    <string name="ap_client">Cliente : %1$s</string>
    <string name="ap_type">Tipo de apostamiento : %1$s</string>
    <string name="ap_key_name">Clave : %1$s</string>
    <string name="ap_place">Lugar : %1$s</string>
    <string name="client_key">Clave : %1$s</string>
    <string name="client_social">Razon social : %1$s</string>
    <string name="provider_alias">Clave : %1$s</string>
    <string name="provider_social">R. Social : %1$s</string>
    <string name="provider_type">Tipo : %1$s</string>
    <string name="provider_title">Buscar proveedor : </string>
    <string name="dsc_save">Guardar</string>
    <string name="percent_display">%1$d \%</string>
    <string name="ap_name">Lugar del apostamiento :</string>
    <string name="ap_key">Nombre clave del apostamiento : </string>
    <string name="ap_type_edit">Tipo de apostamiento</string>
    <string name="social_reason">Razon Social :</string>
    <string name="client_name">Nombre / Clave :</string>
    <string name="client_alias">Abreviacion / Alias :</string>
    <string name="client_site">Site del cliente</string>
    <string name="element_name">Nombre del elemento : %1$s</string>
    <string name="element_created">Fecha de alta : %1$s</string>
    <string name="element_position">Posicion del elemento : %1$s</string>
    <string name="obs_guard">Incidencia / Observaciones : %1$s</string>
    <string name="vigenciadelacondigna">Vigencia de la consigna</string>
    <string name="responsable_deseguridad">Responsable de seguridad de la cuenta :</string>
    <string name="edo_direct_access">Edo. Fuerza</string>
    <string name="security_provider">Proveedor de seguridad</string>
    <string name="group">Grupo</string>
    <string name="emergency_report">Reporte de emergencia</string>
    <string name="event_hour">Hora del evento</string>
    <string name="event_date">Fecha del evento</string>
    <string name="what_happened">¿Que paso?</string>
    <string name="event_facts">Hechos</string>
    <string name="evidences">Evidencias</string>
    <string name="not_saved_yet">No se ha guardado aun</string>
    <string name="guardado">Guardado : %1$s</string>
    <string name="swipe_down_to_refresh">Esta muy vacio aqui :(\n Tira para actualizar</string>
    <string name="faqs">FAQ\'s</string>
    <string name="security">Seguridad Patrimonial</string>
    <string name="welcome">Bienvenido</string>
    <string name="news">Noticias</string>
    <string name="kpis">KPI\'s</string>
    <string name="edoreport_notif">%1$s Estados de fuerza reportados</string>
    <string-array name="apType">
        <item>Filtro</item>
        <item>Accesos / Aduanas</item>
        <item>General</item>
        <item>Adminstrativo</item>
        <item>Monitorista</item>
        <item>Otro</item>
    </string-array>
    <string name="ap_site_id">Site</string>
    <string name="ap_cliente">Cliente</string>
    <string name="ap_guards_required">Guardias requeridos :</string>
    <string-array name="flag_options">
        <item>Resuelto</item>
        <item>Pendiente</item>
        <item>Asignado</item>
    </string-array>
    <string-array name="sites">
        <item>Macrocentro</item>
        <item>Nave 6</item>
    </string-array>
    <string name="site_select_title">Seleccione site : </string>
    <string name="hello_blank_fragment">Hello groups fragment</string>
    <string name="hello_guard_fragment">Hello guard fragment</string>
    <string name="hello_apostamientos_fragment">Hello apostamientos fragment</string>
    <string name="new_provider">Nuevo proveedor</string>
    <string name="rs_provider_hint">Razon social</string>
    <string name="alias_provider_hint">Nombre clave del proveedor</string>
    <string name="rfc_provider_hint">RFC del proveedor</string>
    <string name="title_activity_settings">Configuracion</string>
    <string name="pref_sync">Syncronizacion</string>
    <string name="pref_sync_summ">Description</string>
    <string name="pref_syncConnectionType">Tipo de conexion</string>
    <array name="pref_syncConnectionTypes_entries">
        <item>Hello</item>
        <item>Hello1</item>
        <item>Hello2</item>
        <item>Hello3</item>
        <item>Hello4</item>
    </array>
    <array name="pref_syncConnectionTypes_values">
        <item>Hello</item>
        <item>Hello1</item>
        <item>Hello2</item>
        <item>Hello3</item>
        <item>Hello4</item>
    </array>
    <string name="group_general">General</string>
    <string name="pref_syncConnectionTypes_default">Hello</string>
    <string name="pref_def_mail_title">Destinatarios predeterminados</string>
    <string name="pref_def_mail_summ">Destinos predeterminados para reporte de emergencia</string>
    <string name="pref_def_sos_call_title">Llamada de auxilio</string>
    <string name="pref_def_sos_call_summ">Numero de auxilio</string>
    <string name="pref_def_sos_phone"></string>
    <string name="pref_user_category">Usuario</string>
    <string name="pref_user_title">Nombre de usuario</string>
    <string name="pref_user_chg_summ">Cambiar nombre de usuario</string>
    <string name="pref_user_chg_pssw_title">Contraseña</string>
    <string name="pref_user_chg_pssw_summ">Cambiar contraseña</string>
    <string name="current_passw_prompt">Contraseña actual</string>
    <string name="new_passw_prompt">Nueva contraseña</string>
    <string name="new_passw_prompt_confirm">Confirme nueva contraseña</string>
    <string name="invalid_password">Contraseña invalida</string>
    <string name="passwords_doesntmatch">Las contraseñas no coinciden. Verifique.</string>
    <string name="central">Central</string>
</resources>
