<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/report_cv"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="1dp"
    android:minHeight="100dp"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="5dp">

        <ImageView
            android:id="@+id/report_grade"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:tint="@color/dsc_gray" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/report_title"
                    android:layout_width="0dp"
                    android:layout_height="24dp"
                    android:layout_weight="0.5"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/incident_tiltle" />

                <TextView
                    android:id="@+id/report_timestamp"
                    android:layout_width="0dp"
                    android:layout_height="24dp"
                    android:layout_weight="0.44"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/incident_timestamp"
                    android:textSize="10sp" />

                <ImageView
                    android:id="@+id/r_menu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.05"
                    android:tint="@color/dsc_gray"
                    app:srcCompat="@drawable/ic_baseline_more_vert" />
            </LinearLayout>

            <TextView
                android:id="@+id/report_exp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="6"
                android:padding="10dp"
                android:text="@string/incident_description"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>